theme(fix): remove irrelevant particles of word-wrap mixin

--- a/assets/scss/modules/_typography.scss
+++ b/assets/scss/modules/_typography.scss
@@ -69,12 +69,6 @@ $border-radius: 5px !default;
 
 @mixin word-wrap() {
   overflow-wrap: break-word;
-  word-wrap: break-word;
-  -ms-word-break: break-all;
-  word-break: break-all;
   word-break: break-word;
-  -ms-hyphens: auto;
-  -moz-hyphens: auto;
-  -webkit-hyphens: auto;
   hyphens: auto;
 }
